src/app/globals.css
@import "tailwindcss";
@import 'react-slideshow-image/dist/styles.css';

@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
/*  --color-dark-glass: #0c090980; */
  --color-dark-glass: #0e0a0aa0;
  --color-glass-border: #557;
  --radius-glass: 8px;
  --spacing-ride-gap: 1.5rem;
  --shadow-glass: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}


body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  background-image: url(/Touring.jpg);
  background-size: cover;
  background-attachment: fixed;
  height: 100vh;
}

main {
  padding: 2em;
  display: grid;
  place-items: center;

}

h1 {
  font-size: 2.5rem;
  font-weight: bold;
  color: darkblue;
}

h2 {
  font-size: 2rem;
  font-weight: bold;
}

h3 {
  font-size: 1.5rem;
  font-weight: bold;
}

h4 {
  font-size: 1rem;
  font-weight: bold;
}

.blogwrapper p {
    margin-bottom: 1em;
}


.warpme {
  background-color: #0c090980;
  border: 1px solid #557;
  border-radius: 8px;
  color: #fff;
  margin: 1em;
  padding: 1em;
}

.narrow {
  max-width: 50%;
}

.oldstyle {
  color: yellow;
  text-decoration: underline;
}

/*
.nav-buttons {
  border: 1px solid #777;
  border-radius: 8px;
  padding: 0 1em;
}

.nav-text {
  font-size: 1.5rem;
  font-weight: bold;
  padding: 0 .5em;
  color: darkblue;
}

*/

.embedded-html p {
  margin: .5em;
  padding: .5em;

}

.epost img {
  max-width: 600px;
}

.slideshow img {
  height: 80vh;
  width: auto;
  object-fit: contain;
}



/* global.css or similar */
@media (max-width: 768px) {
      /* Styles for mobile screens */
}

@media (min-width: 769px) {
      /* Styles for larger screens */
}

